feat:新增工厂模式练习代码

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
         <module>itstack-demo-design-20-02</module>
         <module>itstack-demo-design-21-00</module>
         <module>itstack-demo-design-22-00</module>
+        <module>itstack-demo-design-1-02-fatory-model-longshu</module>
     </modules>
 
     <dependencies>
