--- a/itstack-demo-design-1-02-fatory-model-longshu/pom.xml
+++ b/itstack-demo-design-1-02-fatory-model-longshu/pom.xml
@@ -9,15 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>itstack-demo-design-15-00</artifactId>
+    <artifactId>itstack-demo-design-1-02-fatory-model-longshu</artifactId>
+
+
     <dependencies>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.8</version>
-            <scope>test</scope>
+            <groupId>org.itstack</groupId>
+            <artifactId>itstack-demo-design-1-00</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
-
 </project>
