--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <module>itstack-demo-design-6-02-adapter-longshu</module>
         <module>itstack-demo-design-7-02-Bridging-longshu</module>
         <module>itstack-demo-design-8-02-composite-longshu</module>
+        <module>itstack-demo-design-9-02-decorator-longshu</module>
     </modules>
 
     <dependencies>
