feat:新增外观模式（门面模式）练习

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <module>itstack-demo-design-7-02-Bridging-longshu</module>
         <module>itstack-demo-design-8-02-composite-longshu</module>
         <module>itstack-demo-design-9-02-decorator-longshu</module>
+        <module>itstack-demo-design-10-02-appearance-longshu</module>
     </modules>
 
     <dependencies>
